# clinicaio

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Makefile  pyproject.toml
.github/workflows/: lint.yaml  unit_test.yaml
docs/: conf.py  index.md
src/clinicaio/: directory.py  entities.py  exception.py  hello.py  path.py  schema.py
src/clinicaio/generators/caps/: __init__.py  filename.py  flair_linear.py  generator.py  pet_linear.py  t1_linear.py
src/clinicaio/models/: bids_entities.py  entity.py  enum.py  path.py  pet.py
src/clinicaio/models/bids/: __init__.py  _base.py  entity.py
src/clinicaio/subclasses/: dataset.py  subject.py
src/clinicaio/utils/: bids.py  caps.py  caps_generator.py
src/clinicaio/utils/caps_generator/: filename.py  flair_linear.py  generator.py  pet_linear.py  t1_linear.py  utils.py
tests/data/bids/: README  dataset_description.json  participants.tsv
tests/data/bids/sub-001/: sub-001_sessions.tsv
tests/data/bids/sub-001/ses-M000/: sub-001_ses-M000_scans.tsv
tests/data/bids/sub-001/ses-M156/: sub-001_ses-M156_scans.tsv
tests/data/bids/sub-002/: sub-002_sessions.tsv
tests/data/bids/sub-002/ses-M000/: sub-002_ses-M000_scans.tsv
tests/data/bids/sub-002/ses-M070/: sub-002_ses-M070_scans.tsv
tests/data/bids/sub-003/: sub-003_sessions.tsv
tests/data/bids/sub-004/: sub-004_sessions.tsv
tests/unittests/: test_hello.py
tests/unittests/generators/caps/: test_filename.py  test_flair_linear.py  test_generator.py  test_pet_linear.py  test_t1_linear.py
tests/unittests/models/bids/: test_entity.py
tests/unittests/utils/caps_generator/: test_filename.py  test_flair_linear.py  test_generator.py  test_pet_linear.py  test_t1_linear.py
(+84 files in other folders)
