[tool.poetry]
name = "clinicaio"
version = "0.1.0"
description = ""
authors = ["NicolasGensollen <nicolas.gensollen@gmail.com>"]
readme = "README.md"
packages = [{include = "clinicaio", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
