[tool.poetry]
name = "clinicaio"
version = "0.1.0"
description = "A Python library for input/output management of all Clinica projects."
license = "MIT"
authors = ["ARAMIS Lab"]
maintainers = ["Clinica developers <clinica.run@gmail.com>"]
readme = "README.md"
repository = "https://github.com/aramis-lab/clinicaio.git"
packages = [{include = "clinicaio", from = "src"}]
keywords = [
    "bids",
    "image processing",
    "machine learning",
    "neuroimaging",
    "neuroscience"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "I001",
    "PTH",
]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["clinicaio"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
